api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: NodePort
  selector:
    app: synergychat-api 
  ports:
  - protocol: TCP
    nodePort: 30800
    port: 80
    targetPort: 8080
